# -

./: .env.example  .gitignore  PERSONA_EXTRACTION_SUMMARY.md  README.md  persona_kirill_mironchev.json  system_prompt_templates.md  кириллгпт.docx  токены
KirillGPTBot/: CHANGELOG.md  DEPLOY.md  Dockerfile  INSTALLATION_GUIDE.md  README_SETUP.md  STATUS.md  bot.py  docker-compose.yml  init_db.py  install_service.sh  kirillgpt-admin.service  kirillgpt.service  pyproject.toml  replit.md  requirements.txt  start_admin.sh  start_bot.sh
KirillGPTBot/admin/backend/: Dockerfile
KirillGPTBot/admin/backend/app/: __init__.py  bot_integration.py  database.py  main.py  models.py  schemas.py
KirillGPTBot/admin/backend/app/services/: message_service.py
KirillGPTBot/admin/frontend/: index.html  package-lock.json  tsconfig.json
KirillGPTBot/admin/frontend/src/: App.tsx  index.css  main.tsx
KirillGPTBot/admin/frontend/src/components/auth/: LoginForm.tsx  ProtectedRoute.tsx
KirillGPTBot/admin/frontend/src/components/chat/: ChatCard.tsx
KirillGPTBot/admin/frontend/src/components/dashboard/: ActivityFeed.tsx
KirillGPTBot/admin/frontend/src/contexts/: AuthContext.tsx
KirillGPTBot/admin/frontend/src/hooks/: useWebSocket.ts
KirillGPTBot/admin/frontend/src/pages/: MessageFlow.tsx  Settings.tsx
KirillGPTBot/admin/frontend/src/services/: api.ts
KirillGPTBot/admin/frontend/src/types/: api.ts
KirillGPTBot/attached_assets/: Pasted---1757122647207_1757122647208.txt  Pasted---1757607263354_1757607263355.txt
KirillGPTBot/keepalive/: keepalive.py  package.json
(+85 files in other folders)
